<resources>
    <string name="app_name">Pizzou</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_config">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="nav_promocao">Promoções</string>
    <string name="nav_cardapio">Cardápio</string>
    <string name="nav_mensagens">Mensagens</string>
    <string name="nav_localizacao">Localização</string>
    <string name="nav_configuracoes">Configurações</string>
    <string name="nav_abrir">Abrir</string>
    <string name="nav_fechar">Fechar</string>
    <string name="action_novo">Novo Produto</string>


    <string name="API_KEY">AIzaSyAzXOPAY-kcF2uqUOpyHIsmrIGa7uUt7DI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>