<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_promocao"
            android:icon="@drawable/ic_promotion"
            android:title="@string/nav_promocao"
            android:checked="true"
            />
        <item
        android:id="@+id/nav_cardapio"
        android:icon="@drawable/cardapio_logo"
        android:title="@string/nav_cardapio"

            />

        <!-- <item
            android:id="@+id/nav_mensagens"
            android:icon="@drawable/ic_chat_black"
            android:title="@string/nav_mensagens"

            /> -->

        <!-- <item
        android:id="@+id/nav_localizacao"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/nav_localizacao"

            /> -->

        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="@string/action_config"

            />


        <item
            android:id="@+id/nav_localizacao"
            android:icon="@drawable/location"
            android:title="@string/nav_localizacao"

            />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/icone_sairdatela"
            android:title="@string/action_sair"

            />

    </group>
</menu>